--- a/music.html
+++ b/music.html
@@ -112,32 +112,32 @@
             <section>
                 <article class="center" style="padding-top: 10px;" id="rocks">
                     <h5 style="margin-bottom: 5px;">Tethered to the Machine</h5>
-                    <audio controls src="audio/Tethered to the Machine.mp3"></audio>
+                    <audio controls src="audio/Tethered to the Machine.mp3" title="Tethered to the Machine"></audio>
                 </article>
             </section>
 
             <section>
                 <article class="center" style="padding-top: 40px;" id="rocks">
                     <h5 style="margin-bottom: 5px;">The Crescent City</h5>
-                    <audio controls src="audio/The Crescent City.mp3"></audio>
+                    <audio controls src="audio/The Crescent City.mp3" title="The Crescent City"></audio>
                 </article>
             </section>
             <section>
                 <article class="center" style="padding-top: 40px;" id="rocks">
                     <h5 style="margin-bottom: 5px;">Jellies</h5>
-                    <audio controls src="audio/Jellies.mp3"></audio>
+                    <audio controls src="audio/Jellies.mp3" title="Jellies"></audio>
                 </article>
             </section>
             <section>
                 <article class="center" style="padding-top: 40px;" id="rocks">
                     <h5 style="margin-bottom: 5px;">Soaring</h5>
-                    <audio controls src="audio/Soaring.mp3"></audio>
+                    <audio controls src="audio/Soaring.mp3" title="Soaring"></audio>
                 </article>
             </section>
             <section>
                 <article class="center" style="padding-top: 40px;" id="rocks">
                     <h5 style="margin-bottom: 5px;">FISHGUN</h5>
-                    <audio controls src="audio/FISHGUN.mp3"></audio>
+                    <audio controls src="audio/FISHGUN.mp3" title="FISHGUN"></audio>
                 </article>
             </section>
         </main>
