--- a/outlines.html
+++ b/outlines.html
@@ -118,8 +118,8 @@
                 </article>
                 <article>
                     <div class="simpleGallery" style="margin-top:0">
-                        <img src="img/techart/Outlines1.png" width="1280" height="720" style="width:min(1200px, 100%)">
-                        <img src="img/techart/Outlines2.png" width="1280" height="720" style="width:min(1200px, 100%)">
+                        <img src="img/techart/Outlines1.png" width="1280" height="720" style="width:min(1200px, 100%)" alt="Outline Shader" name="Outline Shader 1">
+                        <img src="img/techart/Outlines2.png" width="1280" height="720" style="width:min(1200px, 100%)" alt="Outline Shader" name="Outline Shader 2">
                     </div>
                 </article>
             </section>
