--- a/proceduralgrass.html
+++ b/proceduralgrass.html
@@ -122,10 +122,10 @@
                 </article>
                 <article>
                     <div class="simpleGallery" style="margin-top:0">
-                        <img src="img/techart/Grass1.png" width="1280" height="720" style="width:min(600px, 100%)">
-                        <img src="img/techart/Grass2.png" width="1280" height="720" style="width:min(600px, 100%)">
-                        <img src="img/techart/Grass3.png" width="1280" height="720" style="width:min(600px, 100%)">
-                        <img src="img/techart/Grass4.png" width="1280" height="720" style="width:min(600px, 100%)">
+                        <img src="img/techart/Grass1.png" width="1280" height="720" style="width:min(600px, 100%)" alt="Grass Example" name="Grass 1">
+                        <img src="img/techart/Grass2.png" width="1280" height="720" style="width:min(600px, 100%)" alt="Grass Example" name="Grass 2">
+                        <img src="img/techart/Grass3.png" width="1280" height="720" style="width:min(600px, 100%)" alt="Grass Example" name="Grass 3">
+                        <img src="img/techart/Grass4.png" width="1280" height="720" style="width:min(600px, 100%)" alt="Grass Example" name="Grass 4">
                     </div>
                 </article>
             </section>
