--- a/proceduraltrees.html
+++ b/proceduraltrees.html
@@ -117,13 +117,13 @@
                     </p>
 
                     <div class="simpleGallery">
-                        <img src="img/techart/ProceduralTrees.gif" width="100" height="100">
+                        <img src="img/techart/ProceduralTrees.gif" width="100" height="100" alt="Trees Growing" name="Trees Growing">
                     </div>
 
                     <div class="simpleGallery" style="margin-top:0">
-                        <img src="img/techart/tree1.jpg" width="300" height="300">
-                        <img src="img/techart/tree2.jpg" width="300" height="300">
-                        <img src="img/techart/tree3.jpg" width="300" height="300">
+                        <img src="img/techart/tree1.jpg" width="300" height="300" alt="Tree 1" name="Tree 1">
+                        <img src="img/techart/tree2.jpg" width="300" height="300" alt="Tree 2" name="Tree 2">
+                        <img src="img/techart/tree3.jpg" width="300" height="300" alt="Tree 3" name="Tree 3">
                     </div>
                     
                     <iframe frameborder="0" class="center itchWidget" style="margin-top:40px" src="https://itch.io/embed/1676416?bg_color=faf6d6&amp;fg_color=1b1b1b&amp;link_color=57dc77&amp;border_color=faf6d6" width="552" height="167"><a href="https://liamcribbs.itch.io/procedural-trees">Procedural Trees by Liam Cribbs</a></iframe>
