--- a/rocksandstocks.html
+++ b/rocksandstocks.html
@@ -135,10 +135,10 @@
                 </article>
 
                 <div class="simpleGallery">
-                    <img src="img/rocksandstocks/ReactorCooling.gif" width="1280" height="720">
-                    <img src="img/rocksandstocks/AsteroidProcessing.gif" width="1280" height="720">
-                    <img src="img/rocksandstocks/FlyingShip.gif" width="1280" height="720">
-                    <img src="img/rocksandstocks/StockTrading.gif" width="1280" height="720">
+                    <img src="img/rocksandstocks/ReactorCooling.gif" width="1280" height="720" alt="Reactor Cooling" name="Reactor Cooling">
+                    <img src="img/rocksandstocks/AsteroidProcessing.gif" width="1280" height="720" alt="Asteroid Processing" name="Asteroid Processing">
+                    <img src="img/rocksandstocks/FlyingShip.gif" width="1280" height="720" alt="Flying Ship" name="Flying Ship">
+                    <img src="img/rocksandstocks/StockTrading.gif" width="1280" height="720" alt="Trading Stocks" name="Trading Stocks">
                 </div>
             </section>
         </main>
