--- a/skysailors.html
+++ b/skysailors.html
@@ -139,9 +139,9 @@
                 </article>
 
                 <div class="simpleGallery">
-                    <img srcset="img/skysailors/SkySailors1.jpg, img/skysailors/SkySailors1Small.jpg, 0.5x" src="img/skysailors/SkySailors1.jpg" width="1280" height="720">
-                    <img srcset="img/skysailors/SkySailors2.jpg, img/skysailors/SkySailors2Small.jpg, 0.5x" src="img/skysailors/SkySailors2.jpg" width="1280" height="720">
-                    <img srcset="img/skysailors/SkySailors3.jpg, img/skysailors/SkySailors3Small.jpg, 0.5x" src="img/skysailors/SkySailors3.jpg" width="1280" height="720">
+                    <img srcset="img/skysailors/SkySailors1.jpg, img/skysailors/SkySailors1Small.jpg, 0.5x" src="img/skysailors/SkySailors1.jpg" width="1280" height="720" alt="Sky Sailors 1" name="Sky Sailors 1">
+                    <img srcset="img/skysailors/SkySailors2.jpg, img/skysailors/SkySailors2Small.jpg, 0.5x" src="img/skysailors/SkySailors2.jpg" width="1280" height="720" alt="Sky Sailors 2" name="Sky Sailors 2">
+                    <img srcset="img/skysailors/SkySailors3.jpg, img/skysailors/SkySailors3Small.jpg, 0.5x" src="img/skysailors/SkySailors3.jpg" width="1280" height="720" alt="Sky Sailors 3" name="Sky Sailors 3">
                 </div>
             </section>
         </main>
