--- a/ui.html
+++ b/ui.html
@@ -128,10 +128,10 @@
                     <h2 class="center">Rocks and Stocks</h2>
                     <div class="simpleGallery">
                         <p>These interfaces were developed for <a class="link" href="rocksandstocks.html">Rocks and Stocks</a>. I put an emphasis on fun interactions in the windows themselves. For example, instead of pressing a button to open a door, the player must drag a door-shaped slider to its open position. It was a lot of fun experimenting with new interactions, including 2-axis sliders and spinning wheels.</p>
-                        <img src="img/rocksandstocks/ReactorCooling.gif" width="1280" height="720" style="width:min(750px, 100%)">
-                        <img src="img/rocksandstocks/AsteroidProcessing.gif" width="1280" height="720" style="width:min(750px, 100%)">
-                        <img src="img/rocksandstocks/FlyingShip.gif" width="1280" height="720" style="width:min(750px, 100%)">
-                        <img src="img/rocksandstocks/GrabberArm.gif" width="1280" height="720" style="width:min(750px, 100%)">
+                        <img src="img/rocksandstocks/ReactorCooling.gif" width="1280" height="720" style="width:min(750px, 100%)" alt="Reactor Cooling" name="Reactor Cooling">
+                        <img src="img/rocksandstocks/AsteroidProcessing.gif" width="1280" height="720" style="width:min(750px, 100%)" alt="Asteroid Processing" name="Asteroid Processing">
+                        <img src="img/rocksandstocks/FlyingShip.gif" width="1280" height="720" style="width:min(750px, 100%)" alt="Flying Ship" name="Flying Ship">
+                        <img src="img/rocksandstocks/GrabberArm.gif" width="1280" height="720" style="width:min(750px, 100%)" alt="Grabber Arm" name="Grabber Arm">
                     </div>
                 </article>
 
@@ -139,8 +139,8 @@
                     <h2 class="center">Sky Sailors</h2>
                     <div class="simpleGallery">
                         <p>I programmed and designed the UI for <a class="link" href="skysailors.html">Sky Sailors</a>. This game has full controller support, so the floating cursor needed to work with controllers as well as mice. I created all of the UI scripts & buttons.</p>
-                        <img src="img/skysailors/FabricatorUI.gif" width="1280" height="720" style="width:min(750px, 100%)">
-                        <img src="img/skysailors/MenuUI.gif" width="1280" height="720" style="width:min(750px, 100%)">
+                        <img src="img/skysailors/FabricatorUI.gif" width="1280" height="720" style="width:min(750px, 100%)" alt="Fabricator UI" name="Fabricator UI">
+                        <img src="img/skysailors/MenuUI.gif" width="1280" height="720" style="width:min(750px, 100%)" alt="Menu UI" name-="Menu UI">
                     </div>
                 </article>
 
