--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <header>
             <section class="center">
-                <h1 id="topSpace">Stanlaker Gorbonule</h1>
+                <h1 id="topSpace">Liam Cribbs</h1>
                 <h6 id="subHeading">Game Designer / Programmer</h6>
             </section>
         </header>
