--- a/fishgun.html
+++ b/fishgun.html
@@ -133,10 +133,11 @@
                         One of our main goals was to create fluid player movement that could serve as a base for chaotic abilities and gameplay. I spent a lot of time programming the player controller and tweaking values (so many values!) to make it feel great. A large part of this was adding camera movement to the player's actions, like jumping, sliding, and headbob while running.
                     </p>
 
-                    <iframe frameborder="0" class="center itchWidget" style="margin-top:40px" src="https://itch.io/embed/1981555?bg_color=242424&amp;fg_color=C1FF3B&amp;link_color=CC6CF5&amp;border_color=242424"><a href="https://liamcribbs.itch.io/fishgun">FISHGUN by Liam Cribbs</a></iframe>
+                    <!-- <iframe frameborder="0" class="center itchWidget" style="margin-top:40px" src="https://itch.io/embed/1981555?bg_color=242424&amp;fg_color=C1FF3B&amp;link_color=CC6CF5&amp;border_color=242424"><a href="https://liamcribbs.itch.io/fishgun">FISHGUN by Liam Cribbs</a></iframe> -->
+                    <iframe src="https://store.steampowered.com/widget/2431090/" frameborder="0" width="646" height="190"></iframe>
 
                     <div class="ytContainer" style="margin-top:40px">
-                        <iframe src="https://www.youtube.com/embed/IEQfd67Txj8" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/watch?v=7hXPJfF_3S4" allowfullscreen></iframe>
                     </div>
                 </article>
             </section>
