--- a/fishgun.html
+++ b/fishgun.html
@@ -134,7 +134,7 @@
                     </p>
 
                     <!-- <iframe frameborder="0" class="center itchWidget" style="margin-top:40px" src="https://itch.io/embed/1981555?bg_color=242424&amp;fg_color=C1FF3B&amp;link_color=CC6CF5&amp;border_color=242424"><a href="https://liamcribbs.itch.io/fishgun">FISHGUN by Liam Cribbs</a></iframe> -->
-                    <iframe src="https://store.steampowered.com/widget/2431090/" frameborder="0" width="646" height="190"></iframe>
+                    <iframe class="center itchWidget" style="margin-top:40px" src="https://store.steampowered.com/widget/2431090/" frameborder="0" width="646" height="190"></iframe>
 
                     <div class="ytContainer" style="margin-top:40px">
                         <iframe src="https://www.youtube.com/watch?v=7hXPJfF_3S4" allowfullscreen></iframe>
