--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
 
         <main>
             <section>
+                <iframe class="center itchWidget" style="margin-bottom:-60px" src="https://store.steampowered.com/widget/2431090/" frameborder="0" width="646" height="190"></iframe>
+            </section>
+            <section>
                 <div class="alignCenter" id="games" style="padding-top:50px;">
                     <h2>Games</h2>
                 </div>
