--- a/about.html
+++ b/about.html
@@ -116,6 +116,10 @@
                     <p>
                         You can contact me at <a class="link" href="mailto:liamcribbs0@gmail.com">liamcribbs0@gmail.com</a>
                     </p>
+
+                    <div class="simpleGallery">
+                        <img src="img/sorrel.png" width="1280" height="720" style="width:min(600px, 90%)" alt="Outline Shader" name="Outline Shader 1">
+                    </div>
                 </article>
             </section>
         </main>
