--- a/fishgun.html
+++ b/fishgun.html
@@ -137,7 +137,7 @@
                     <iframe class="center itchWidget" style="margin-top:40px" src="https://store.steampowered.com/widget/2431090/" frameborder="0" width="646" height="190"></iframe>
 
                     <div class="ytContainer" style="margin-top:40px">
-                        <iframe src="https://www.youtube.com/watch?v=7hXPJfF_3S4&ab_channel=FISHGUNNERS" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/7hXPJfF_3S4" allowfullscreen></iframe>
                     </div>
                 </article>
             </section>
