--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <title>
-            Liam Cribbs
+            Liam Cribbs | Resume
         </title>
         <meta name="description" content="Liam Cribbs' Portfolio">
         <meta name="keywords" content="Liam Cribbs">
