--- a/proceduraltrees.html
+++ b/proceduraltrees.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <script src="script.js"></script>
         <title>
-            Liam Cribbs
+            Liam Cribbs | Procedural Trees
         </title>
         <meta name="description" content="Liam Cribbs' Portfolio">
         <meta name="keywords" content="Liam Cribbs">
