--- a/fishgun.html
+++ b/fishgun.html
@@ -139,6 +139,11 @@
                     <div class="ytContainer" style="margin-top:40px">
                         <iframe src="https://www.youtube.com/embed/7hXPJfF_3S4" allowfullscreen></iframe>
                     </div>
+
+                    <h5 id="topSpace">FISHGUN running in showcase mode on 3 CRTs</h5>
+                    <div class="ytContainer" style="margin-top:40px">
+                        <iframe src="https://www.youtube.com/embed/xXabQTBhV2I" allowfullscreen></iframe>
+                    </div>
                 </article>
             </section>
         </main>
